# pad-bot-3

./: .editorconfig  .gitignore
client/: package-lock.json
client/src/: app.html
client/src/routes/debug/: +page.svelte
server/: main.py  pyproject.toml
